assets/css/style.scss
---
---

@import 
  /* "/assets/css/tufte.css", */
  "/assets/css/tufte-notes.css",
  "/assets/css/banner.css",
  "minima/skins/{{ site.minima.skin | default: 'classic' }}",
  "minima/initialize";

.site-logo {
  border-radius: 50%;
  margin: 3px 12px 12px 0px;
  }

a.site-title {
  font-weight: 600;
}

header.site-header {
  position: -webkit-sticky; /* For Safari */
  position: sticky;
  top: 0;
  z-index: 1000; /* Ensure it stays above other content */
  background-color: #fffff8; /* Optional: Change this to match your site's color scheme */
  /* box-shadow: 0 2px 5px rgba(0,0,0,0.1); /* Optional: Adds a subtle shadow */
}

header .wrapper {
  max-width: calc(800px -(30px));
  margin-right: auto;
  margin-left: auto;
  padding-right: 15px;
  padding-left: 15px;
}

header .tufte {
  padding: 0 12.5% 0 12.5%;
  /* padding-right: 30px;
  padding-left: 30px; */
  margin-right: auto;
  margin-left: auto;
}

body {
  /* width: 87.5%;
  margin-left: auto;
  margin-right: auto; */
  font-family: Merriweather Sans, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
  font-weight: 300;
  background-color: #fffff8;
  color: #111;
  /* max-width: 1400px; */
  counter-reset: sidenote-counter;
}

article {
  /* width: 87.5%;
  margin-left: auto;
  margin-right: auto; */
}

article.tufte {
  width: 87.5%;  
  padding: 30px 0 0 12.5%;
}

h1 {
  font-family: Merriweather;
  font-weight: 400;
  margin-top: 4rem;
  margin-bottom: 3rem;
  /* font-size: 3.2rem; */
  font-size: 3rem;
  line-height: 1;
}

h2 {
  font-family: Merriweather;
  /* font-style: italic; */
  font-weight: 400;
  margin-top: 2.1rem;
  margin-bottom: 1.4rem;
  font-size: 2.2rem;
  line-height: 1.3;
}

h3 {
  font-family: Merriweather;
  /* font-style: italic; */
  /* font-weight: 400; */
  /* font-size: 1.7rem; */
  font-weight: 600;
  font-size: 1.5rem;
  margin-top: 2rem;
  margin-bottom: 1.4rem;
  line-height: 1.3;
}

h4 {
  font-family: Merriweather;
  font-weight: 600;
  font-size: 1.5rem;
  margin-top: 0.2rem;
  margin-bottom: 0.4rem;
  line-height: 1.3;
}
.tufte hr {
  width: 55%;
}

p {
  font-size: 1.1rem; /* tufte 1.4rem */
  margin-top: 1.4rem;
  margin-bottom: 1.4rem;
  padding-right: 0;
  vertical-align: baseline;
}

strong, b {
  font-weight: 600; /* or try 800 or 900 for even heavier */
}

.tufte article > div > p {
  width: 55%;
}

article.tufte > p {
  width: 55%;
}

.tufte ul {
  width: 55%;
}

.excerpts p {
  margin-top: 0.5rem;
  margin-bottom: 2rem;
}

.tufte blockquote {
  width: 55%;
}
p.tags {
  font-size: 0.9rem;
}

.tags a {
    border-bottom: none;
}

span.notes {
  font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
  /* font-size: 1.3rem; */
  font-weight: 400;
}

span.links {
  font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
  font-size: 1.3rem;
  font-weight: 400;
}

.links img {
  vertical-align: middle;
  height: 1.5em;
  width: auto;
}

figure {
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
    max-width: 55%;
    -webkit-margin-start: 0;
    -webkit-margin-end: 0;
    margin: 0 0 3em 0;
}
figure .flex {
  display: flex; /* Use flexbox for layout */
  justify-content: space-between; /* Space out the images */
}
.flex img {
  max-width: 48%; /* Adjust width to fit side-by-side */
  height: auto; /* Maintain aspect ratio */
}
figure .marginnote,
figure .sidenote {
  float: right;
  clear: right;
  margin-right: -60%;
  width: 50%;
  margin-top: 0;
  font-size: 1.1rem;
  line-height: 1.3;
  vertical-align: baseline;
  position: relative;
}
figcaption {
    float: right;
    clear: right;
    margin-top: 0;
    margin-bottom: 0;
    font-size: 1.1rem;
    line-height: 1.6;
    vertical-align: baseline;
    position: relative;
    max-width: 40%;
}

figure.fullwidth figcaption {
    margin-right: 24%;
}

a {
  color: #f55b2c;
  border-bottom: 1px solid #e0e2e1;
  /* margin-top: -1px; */
  padding: 1px 2px;
}

header a{
  border: none;
}

.site-nav .page-link {
  color: #111111;
  line-height: 1.5;
  padding: 17px 10px 19px 10px;
}

a:hover {
  color: #131313;
  background-color: #fff7a5;
  border-color: #f55b2c;
  text-decoration: none;
  padding: 1px 2px;
}

a:visited {
  color: #ba2e04;
}

/* blog posts */

.post-link {
  display: inline;
}

.nav-links {
  display: flex;
  justify-content: space-between;
  margin-top: 2rem;
  font-size: 1.1rem; /* tufte 1.4rem */
  margin-top: 1.4rem;
  margin-bottom: 1.4rem;
  padding-right: 0;
  vertical-align: baseline;
}

.tufte .nav-links {
  width: 55%;
}

/* header area logo */

.role-header {
  display: flex; /* Makes thumbnail match the height of .role-text */ 
  align-items: stretch; /* Makes items match the same height */
}

.role-header p {
  width: 100%;
}

.role-meta {
  /* display: flex;
  flex-direction: column; */
}

.role-thumb {
  flex-basis: fit-content;
  padding: 15px;
}

.role-thumb img {
  object-fit: contain; /* Helps maintain aspect ratio of the image */  
  /* flex-basis: 33%; This will take up to 1/3 of the width */
}

/* row summary styling */

.row-block {
  display: flex;
  align-items: stretch; /* Makes items match the same height */
}

.row-text {
  flex-basis: 80%; /* This will take up to 2/3 of the width */
}

.row-thumb {
  display: flex; /* Makes thumbnail match the height of .role-text */
  flex-basis: 33%; /* This will take up to 1/3 of the width */
  /* flex-basis: fit-content; */
  padding: 0px 15px 0px 15px;
}

.row-thumb img {
  /* width: 100%;
  height: 100%; */
  object-fit: contain; /* Helps maintain aspect ratio of the image */
}

/* tiled thumbnails modified https://codepen.io/rajeshuiux/pen/QWLrNmL */

.container  {
  /* max-width:1140px; */
  max-height: 300px;
  margin:0 auto; 
  display:block;
}

.row  {
  display:flex;
  /* align-items:center; */
}

.thumb-box {
  display:flex;
  /* max-width:33.3333%; */
  margin:0 4px;
  position:relative;
  flex: 1;
}

.thumb-box a {
  /* padding: 0; */
  position: relative;
  width: 100%;
  height: 100%;
  border: none;
}

.thumb-box img { 
    height: 200px;
    width: auto;
    /* max-width: fit-content; */
    /* float: left; */
    object-fit: cover;
}

.overlay-box { /*
  position:absolute;
  bottom:0;
  width:90%;
  z-index:9998;
  left:0;
  padding:5%;
  background-image: linear-gradient(to bottom, transparent, rgba(0,0,0,0.75)); */ 
}

.meta {
  font-size:14px;
  display:block;  
}

.main-title {
  font-size:16px;
  display:block;
  font-weight:700;
  text-shadow:0 0 1px rgba(0,0,0,0.5);
}

.thumb-box a:hover .overlay-box {
  background-image: linear-gradient(to bottom, transparent, rgba(0,0,0, 1));
}

@media (max-width: 760px) {
    body {
        width: 84%;
        padding-left: 8%;
        padding-right: 8%;
    }

    hr,
    section > p,
    section > footer,
    section > table,
    article.tufte > p,
    .tufte article > div > p {
        width: 100%;
    }
    
    pre > code {
        width: 97%;
    }

    section > dl,
    section > ol,
    section > ul {
        width: 90%;
    }

    figure {
        max-width: 90%;
    }

    figcaption,
    figure.fullwidth figcaption {
        margin-right: 0%;
        max-width: none;
    }

    blockquote {
        margin-left: 1.5em;
        margin-right: 0em;
    }

    blockquote p,
    blockquote footer {
        width: 100%;
    }

    label.margin-toggle:not(.sidenote-number) {
        display: inline;
    }

    .sidenote,
    .marginnote {
        display: none;
    }

    .margin-toggle:checked + .sidenote,
    .margin-toggle:checked + .marginnote {
        display: block;
        float: left;
        left: 1rem;
        clear: both;
        width: 95%;
        margin: 1rem 2.5%;
        vertical-align: baseline;
        position: relative;
    }

    label {
        cursor: pointer;
    }

    div.table-wrapper,
    table {
        width: 85%;
    }

    img {
        /* width: 100%; */
    }
}

